src/components/screens/monitor/delegates/forgingDetails.css
@import '../../../../app/variables.css';
@import '../../../../app/mixins.css';

.contentWrapper {
  & > div {
    padding: 0 20px;
  }

  & h3 {
    @mixin contentNormal bold;

    margin: 0;
    position: relative;

    &::after {
      background-color: var(--color-platinum);
      content: '';
      height: 1px;
      left: 0;
      top: 25px;
      position: absolute;
      width: 100%;
    }
  }

  & .contentBody,
  & .totalForged {
    margin-top: 15px;
  }

  & .totalForged {
    @mixin contentNormal;
  }

  & .contentBody {
    @mixin contentNormal bold;

    color: var(--color-ultramarine-blue);
  }
}

